# options-pricing-engine

./: .gitignore  README.md  pyproject.toml
examples/: fit_surface.py  plot_smile.py  price_a_chain.py
optionslib/: __init__.py  bench.py  chains.py  greeks.py  implied_vol.py  surface.py
optionslib/models/: __init__.py  binomial.py  black_scholes.py  monte_carlo.py
tests/: test_binomial.py  test_black_scholes.py  test_edges.py  test_greeks.py  test_implied_vol.py  test_monte_carlo.py  test_surface.py
