[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optionslib"
version = "0.1.0"
description = "Offline options pricing engine: Black Scholes, binomial, Monte Carlo, IV, and vol surfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["optionslib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["optionslib"]
omit = ["optionslib/bench.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
